fix hamburger menu on mobile

--- a/ecoSim/ecoStyles.css
+++ b/ecoSim/ecoStyles.css
@@ -539,3 +539,52 @@ h4.farmsListHeader {
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 768px) {
+
+    body main>* {
+      width: 100%;
+    }
+
+    :root {
+      font-size: 15px;
+    }
+
+    nav.toolsSection .toolList {
+      background-color: #0a2647;
+      position: fixed;
+      left: -1000px;
+      flex-direction: column;
+      justify-content: flex-start;
+      width: 100%;
+      text-align: center;
+      transition: 0.3s;
+    }
+
+    nav.toolsSection .toolList.active {
+      left: 0;
+      position: fixed;
+      z-index: 100;
+    }
+
+    nav.toolsSection .toolList.toolList {
+    }
+
+    .hamburger {
+      margin: 10px;
+      display: block;
+      cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+  }
